Created cite function to cite background articles for this package

--- a/vignettes/references.bib
+++ b/vignettes/references.bib
@@ -1,7 +1,7 @@
 @Article{RefFinder,
   title = {miRDeepFinder: a miRNA analysis tool for 
   	deep sequencing of plant small RNAs},
-  author = {{Fuliang Xie}, {Peng Xiao}, {Dongliang Chen}, {Lei Xu}, {Baohong Zhang}},
+  author = {Fuliang, Xie and Peng, Xiao and Dongliang, Chen and Lei, Xu and Baohong, Zhang},
   organization = {Department of Biology, East Carolina University, Greenville, NC, 27858, USA.},
   address = {Greenville, USA},
   year = {2012},
@@ -2334,7 +2334,8 @@ pages = {1--9},
 pmid = {17026756},
 title = {{Selection of housekeeping genes for gene expression studies in human reticulocytes using real-time PCR}},
 volume = {7},
-year = {2006}
+year = {2006},
+key = {delta-Ct}
 }
 @article{Pfaffl2004,
 abstract = {The stability of standard gene expression is an elementary prerequisite for internal standardisation of target gene expression data and many so called housekeeping genes with assumed stable expression can exhibit either up-or down-regulation under some experimental conditions. The developed, and herein presented, software called BestKeeper determines the best suited standards, out of ten candidates, and combines them into an index. The index can be compared with further ten target genes to decide, whether they are differentially expressed under an applied treatment. All data processing is based on crossing points. The BestKeeper software tool was validated on four housekeeping genes and 10 members of the somatotropic axis differentially expressed in bovine corpora lutea total RNA. The BestKeeper application and necessary information about data processing and handling can be downloaded on http://www.wzw.tum.de/ gene-quantification/bestkeeper.html.},
